--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
               }
               .b{
                 display: block;
-              }
-			  @media(max-width: 600px){
+			  }
        .row .text-center #filter-list{
              margin: 0px;
              border: none;
@@ -62,9 +61,9 @@
              background-color: #fff;
          }
          .text-center{
-             display: flex;
-            box-shadow: 10px 12px 10px black;
-            background-color: blanchedalmond;
+             /* display: flex; */
+            /* box-shadow: 10px 12px 10px black; */
+            /* background-color: blanchedalmond; */
              overflow: hidden;
          }
          .logo{
@@ -72,7 +71,7 @@
             height:revert;
             width: 250px;
             background-color: #fff;
-            border-right: 2px solid black;
+            /* border-right: 2px solid black; */
          }
          .logo span{
              font-size: 1.2rem;
@@ -99,9 +98,9 @@
 }
 #filter-list li:hover{
     color: #fff;
-    background-color: gray;
+    background-color: #ff2505;
 }
-    .row .text-center img{
+    nav .logo img{
             max-height: 79px;
     min-height: 57px;
          }
@@ -124,6 +123,7 @@
 		 <!-- Navbar -->
 		 <nav class="navbar">
 			<div class="inner-width">
+				<a  class="logo b"><img src="images/logo-p.png" alt="" style="width: 80px; height: 40px;"><span>vFindFit</span></a>
 			  <button class="menu-toggler">
 				<span></span>
 				<span></span>
@@ -139,7 +139,6 @@
 		  </nav>
 		  <div class="row b">
 			<div class="col-md-12 text-center .b">
-				<a  class="logo"><img src="images/logo-p.png" alt="" style="width: 80px; height: 40px;"><span>vFindFit</span></a>
 				<ul id="filter-list">
 				<a  href="podcast/devotional"><li class="filter">Devotional</li></a>
 				<a  href="podcast/khaniya"><li class="filter"> Khani Suno</li></a>
@@ -408,3 +407,4 @@
 
 	</body>
 </html>
+
